@@ -1,6 +1,7 @@
 Version 2.5.21dev:
 
 * Added microsoft_x_box_one_pad_11_6_1_0_linux.conf.
+* Updated emulation core from WinUAE 2900b25.
 
 Version 2.5.20dev:
 
